# micropython-hx711

./: .gitignore  README.md  hx711.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: scale.py  scales.py
hx711/: __init__.py
tests/: test_scale.py
