[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "hx711-micropython-impementation"
version = "0.0.2"
description = "Based on SergeyPiskunov's implementation. More functionalities."
authors = [{name = "Cassio Peluso", email="cassiorodrigo@cassiorodrigo.org"}]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

